# change-detector

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: publish-image.yml
infra/local/: configuration.yaml
src/: main.rs
src/internal/: configuration.rs  errors.rs  mod.rs  poller.rs  response_cache.rs
src/pkg/: alerting.rs  client.rs  mod.rs  webdriver.rs
